--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -177,6 +177,8 @@
     disk_ledger_path = "storage/ledger/rocks_db"
     # length of the changes history. Higher values allow bootstrapping nodes with slower connections
     final_history_length = 100
+    # path of the initial deferred credits file
+    initial_deferred_credits_path = "base_config/deferred_credits.json"
 
 [consensus]
     # max number of previously discarded blocks kept in RAM
