Update crate ed25519-dalek from 1.0 to 2.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -123,7 +123,8 @@ ctrlc = "3.2.5"
 dialoguer = "0.10"
 directories = "4.0"
 displaydoc = "0.2"
-ed25519-dalek = "=1.0"
+# ed25519-dalek = "=1.0"
+ed25519-dalek = { version = "2.0", features = ["rand_core", "zeroize"] }
 erased-serde = "0.3"
 futures = "0.3.18"
 futures-util = "0.3.25"
