--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -349,7 +349,7 @@
     # refuse consecutive bootstrap attempts from a given IP when the interval between them is lower than per_ip_min_interval milliseconds
     per_ip_min_interval = 180000
     # read-write limitation for a connection in bytes per seconds (about the bootstrap specifically)
-    rate_limit = 10_485_760    # 10 Mo / secs
+    rate_limit = 20_971_520    # 20 Mo/sec
 
 [pool]
     # max number of operations kept in the pool
