--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -375,8 +375,8 @@
 [factory]
     # initial delay in milliseconds to wait before starting production to avoid double staking on node restart
     initial_delay = 100
-    # path to your staking wallet
-    staking_wallet_path = "config/staking_wallet.dat"
+    # path to your staking wallets
+    staking_wallet_path = "config/staking_wallets"
     # stop or not the production in case we are not connected to anyone
     stop_production_when_zero_connections = true
 
