--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,7 +98,7 @@ massa_versioning = { path = "./massa-versioning" }
 massa_wallet = { path = "./massa-wallet" }
 
 # Massa projects dependencies
-massa-proto-rs = {git = "https://github.com/massalabs/massa-proto-rs", "rev" = "32179e2"}
+massa-proto-rs = {git = "https://github.com/massalabs/massa-proto-rs", "rev" = "c7a29753d7d31864779db01e8260a8bf0748e10c"}
 massa-sc-runtime = {git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "main"}
 peernet = { git = "https://github.com/massalabs/PeerNet", "branch" = "main" }
 
@@ -156,6 +156,7 @@ rand = "0.8"
 rand_distr = "=0.4.3"
 rand_xoshiro = "0.6"
 rayon = "1.7.0"
+rcgen = "0.11.1"
 rocksdb = "0.20"
 rust_decimal = "1.26"
 rustyline = "10.0.0"
