Add all contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -15,6 +15,290 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "damip",
+      "name": "Damir Vodenicarevic",
+      "avatar_url": "https://avatars.githubusercontent.com/u/10211103?v=4",
+      "profile": "https://github.com/damip",
+      "contributions": [
+        "ideas",
+        "code"
+      ]
+    },
+    {
+      "login": "AureliaDolo",
+      "name": "Aurelia",
+      "avatar_url": "https://avatars.githubusercontent.com/u/56112063?v=4",
+      "profile": "https://github.com/AureliaDolo",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "yvan-sraka",
+      "name": "Yvan Sraka",
+      "avatar_url": "https://avatars.githubusercontent.com/u/705213?v=4",
+      "profile": "https://yvan.sraka.xyz/",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "adrien-zinger",
+      "name": "Adrien Zinger",
+      "avatar_url": "https://avatars.githubusercontent.com/u/7893775?v=4",
+      "profile": "https://github.com/adrien-zinger",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "gterzian",
+      "name": "Gregory Terzian",
+      "avatar_url": "https://avatars.githubusercontent.com/u/2792687?v=4",
+      "profile": "https://medium.com/@polyglot_factotum",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "aoudiamoncef",
+      "name": "Moncef AOUDIA",
+      "avatar_url": "https://avatars.githubusercontent.com/u/22281426?v=4",
+      "profile": "https://www.maoudia.com/",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "Ben-PH",
+      "name": "Ben",
+      "avatar_url": "https://avatars.githubusercontent.com/u/16680090?v=4",
+      "profile": "https://github.com/Ben-PH",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "modship",
+      "name": "Modship",
+      "avatar_url": "https://avatars.githubusercontent.com/u/9607217?v=4",
+      "profile": "https://github.com/modship",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "sydhds",
+      "name": "Sydhds",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1263828?v=4",
+      "profile": "https://github.com/sydhds",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "litchipi",
+      "name": "Litchi Pi (Tim)",
+      "avatar_url": "https://avatars.githubusercontent.com/u/61109829?v=4",
+      "profile": "https://github.com/litchipi",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "Leo-Besancon",
+      "name": "Leo-Besancon",
+      "avatar_url": "https://avatars.githubusercontent.com/u/29632494?v=4",
+      "profile": "https://github.com/Leo-Besancon",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "dr-chain",
+      "name": "dr-chain",
+      "avatar_url": "https://avatars.githubusercontent.com/u/12458730?v=4",
+      "profile": "https://github.com/dr-chain",
+      "contributions": [
+        "security"
+      ]
+    },
+    {
+      "login": "thomas-senechal",
+      "name": "Thomas Sénéchal",
+      "avatar_url": "https://avatars.githubusercontent.com/u/44696378?v=4",
+      "profile": "https://gitlab.com/thomas-senechal",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "arhuman",
+      "name": "arhuman",
+      "avatar_url": "https://avatars.githubusercontent.com/u/283991?v=4",
+      "profile": "http://blog.assad.fr/",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "bilboquet",
+      "name": "JF",
+      "avatar_url": "https://avatars.githubusercontent.com/u/8612342?v=4",
+      "profile": "https://github.com/bilboquet",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "Eitu33",
+      "name": "Eitu33",
+      "avatar_url": "https://avatars.githubusercontent.com/u/89928840?v=4",
+      "profile": "https://github.com/Eitu33",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "qdrn",
+      "name": "Adrien LF",
+      "avatar_url": "https://avatars.githubusercontent.com/u/13425544?v=4",
+      "profile": "https://github.com/qdrn",
+      "contributions": [
+        "ideas",
+        "bug",
+        "doc"
+      ]
+    },
+    {
+      "login": "Noxhaa",
+      "name": "Noxhaa",
+      "avatar_url": "https://avatars.githubusercontent.com/u/94361436?v=4",
+      "profile": "https://github.com/Noxhaa",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
+      "login": "sebastien-forestier",
+      "name": "Sébastien Forestier",
+      "avatar_url": "https://avatars.githubusercontent.com/u/11048486?v=4",
+      "profile": "https://github.com/sebastien-forestier",
+      "contributions": [
+        "ideas"
+      ]
+    },
+    {
+      "login": "musitdev",
+      "name": "Philippe Delrieu",
+      "avatar_url": "https://avatars.githubusercontent.com/u/5486375?v=4",
+      "profile": "https://github.com/musitdev",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "jcbaillie",
+      "name": "jcbaillie",
+      "avatar_url": "https://avatars.githubusercontent.com/u/986939?v=4",
+      "profile": "https://jcbaillie.net/",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
+      "login": "pymoussgithub",
+      "name": "pymoussgithub",
+      "avatar_url": "https://avatars.githubusercontent.com/u/51510135?v=4",
+      "profile": "https://github.com/pymoussgithub",
+      "contributions": [
+        "promotion"
+      ]
+    },
+    {
+      "login": "rykcod",
+      "name": "Dockyr",
+      "avatar_url": "https://avatars.githubusercontent.com/u/32191714?v=4",
+      "profile": "https://github.com/rykcod",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
+      "login": "SecorD0",
+      "name": "SecorD",
+      "avatar_url": "https://avatars.githubusercontent.com/u/25284138?v=4",
+      "profile": "https://t.me/OnePackage",
+      "contributions": [
+        "bug"
+      ]
+    },
+    {
+      "login": "Kryptopaid",
+      "name": "Kesha",
+      "avatar_url": "https://avatars.githubusercontent.com/u/81397547?v=4",
+      "profile": "https://massa.net/",
+      "contributions": [
+        "promotion",
+        "doc"
+      ]
+    },
+    {
+      "login": "Ben-Rey",
+      "name": "Senji888",
+      "avatar_url": "https://avatars.githubusercontent.com/u/44082144?v=4",
+      "profile": "https://github.com/Ben-Rey",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
+      "login": "T1l3",
+      "name": "Tib",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1226419?v=4",
+      "profile": "https://github.com/T1l3",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
+      "login": "altai0",
+      "name": "Oğuzhan",
+      "avatar_url": "https://avatars.githubusercontent.com/u/36895904?v=4",
+      "profile": "https://github.com/altai0",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
+      "login": "leoloco",
+      "name": "leoloco",
+      "avatar_url": "https://avatars.githubusercontent.com/u/12166652?v=4",
+      "profile": "https://github.com/leoloco",
+      "contributions": [
+        "bug",
+        "doc"
+      ]
+    },
+    {
+      "login": "fsidhoum",
+      "name": "fsidhoum",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4265519?v=4",
+      "profile": "https://github.com/fsidhoum",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "thibault-ketterer",
+      "name": "thibault ketterer",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4283686?v=4",
+      "profile": "https://github.com/thibault-ketterer",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
