--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -308,7 +308,7 @@
     # Cooldown before testing again old peer
     test_oldest_peer_cooldown = 720000
     # Rate limitation on the data streams (per second)
-    rate_limit = 2097152    # 2 Mo / secs
+    rate_limit = 5_242_880    # 5 MiB / secs
     # Peer default category limits
     default_category_info = { target_out_connections = 10, max_in_connections_per_ip = 2, max_in_connections = 15, allow_local_peers = false }
     # Peer categories limits
@@ -377,7 +377,7 @@
     # refuse consecutive bootstrap attempts from a given IP when the interval between them is lower than per_ip_min_interval milliseconds
     per_ip_min_interval = 180000
     # read-write limitation for a connection in bytes per seconds (about the bootstrap specifically)
-    rate_limit = 20_971_520    # 20 Mo/sec
+    rate_limit = 20_971_520    # 20 MiB /sec
 
 [pool]
     # max number of operations kept in the pool
