Fix tests compilation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,6 +109,7 @@ substruct = { git = "https://github.com/sydhds/substruct", branch = "main" }
 machine = { git = "https://github.com/antifuchs/machine", "branch" = "fix-workspace-build" }
 aes-gcm = "0.10"
 anyhow = "1.0"
+assert_matches = "1.5"
 async-trait = "0.1.58"
 atty = "0.2"
 bitvec = "1.0"
@@ -171,6 +172,7 @@ serial_test = "1.0.0"
 sha2 = "0.10.6"
 sha3 = "0.10.8"
 socket2 = "0.4.7"
+stream_limiter = "3.2.0"
 structopt = "0.3"
 strum = "0.24"
 strum_macros = "0.24"
@@ -190,4 +192,3 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 walkdir = "2.3.3"
 variant_count = "1.1.0"
-stream_limiter = "3.2.0"
