Remove ip feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -135,6 +135,7 @@ hex-literal = "0.3.4"
 http = "0.2.8"
 humantime = "2.1.0"
 hyper = "0.14.25"
+ip_rfc = "0.1.0"
 itertools = "0.10"
 jsonrpsee = "0.19.0"
 jsonrpsee-http-client = "0.19.0"
