--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,7 +52,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly-2023-07-01
+          toolchain: 1.71.1
           target: ${{ matrix.target }}
           override: true
       - uses: Swatinem/rust-cache@v2
