--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly-2023-07-01
+          toolchain: 1.71.1
           components: rustfmt
           override: true
       - uses: Swatinem/rust-cache@v2
@@ -55,7 +55,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly-2023-07-01
+          toolchain: 1.71.1
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "check"
@@ -80,7 +80,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly-2023-07-01
+          toolchain: 1.71.1
           components: clippy
           override: true
       - uses: Swatinem/rust-cache@v2
@@ -131,7 +131,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly-2023-07-01
+          toolchain: 1.71.1
           override: true
       - uses: Swatinem/rust-cache@v2
         with:
@@ -171,7 +171,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly-2023-07-01
+          toolchain: 1.71.1
           components: rustfmt
           override: true
       - uses: actions/checkout@v3
@@ -206,7 +206,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: nightly-2023-07-01
+          toolchain: 1.71.1
           components: rustfmt
           override: true
       - uses: Swatinem/rust-cache@v2
