--- a/massa-consensus-exports/Cargo.toml
+++ b/massa-consensus-exports/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = {workspace = true}   # BOM UPGRADE     Revert to "1.0" if problem
 thiserror = {workspace = true}
 jsonrpsee = {workspace = true, "features" = ["server"]}
 tokio = {workspace = true, "features" = ["sync"]}
-mockall = {workspace = true, "features" = ["nightly"], "optional" = true}   # BOM UPGRADE     Revert to {"version": "0.11.4", "features": ["nightly"], "optional": true} if problem
+mockall = {workspace = true, "optional" = true}   # BOM UPGRADE     Revert to {"version": "0.11.4", "optional": true} if problem
 massa_channel = {workspace = true}
 massa_hash = {workspace = true}
 massa_execution_exports = {workspace = true}
