--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -86,12 +86,20 @@
         draw_lookahead_period_count = 10
         # max number of addresses that can be included in a single request
         max_addresses_per_request = 50
+        # max number of slot ranges that can be included in a single request
+        max_slot_ranges_per_request = 50
+        # max length of slot ranges
+        max_slot_ranges_length = 100
         # max number of block ids that can be included in a single request
         max_block_ids_per_request = 50
         # max number of endorsement ids that can be included in a single request
         max_endorsement_ids_per_request = 100
         # max number of operation ids that can be included in a single request
         max_operation_ids_per_request = 250
+        # max op datastore entries per request
+        max_datastore_entries_per_request = 128
+        # max number of filters that can be included in a single request
+        max_filters_per_request = 32
         # certificate authority root path
         certificate_authority_root_path = "config/tls_public_ca.pem"
         # server certificate path
@@ -151,12 +159,20 @@
         draw_lookahead_period_count = 10
         # max number of addresses that can be included in a single request
         max_addresses_per_request = 50
+        # max number of slot ranges that can be included in a single request
+        max_slot_ranges_per_request = 50
+        # max length of slot ranges
+        max_slot_ranges_length = 100
         # max number of block ids that can be included in a single request
         max_block_ids_per_request = 50
         # max number of endorsement ids that can be included in a single request
         max_endorsement_ids_per_request = 100
         # max number of operation ids that can be included in a single request
         max_operation_ids_per_request = 250
+        # max op datastore entries per request
+        max_datastore_entries_per_request = 128
+        # max number of filters that can be included in a single request
+        max_filters_per_request = 32
         # certificate authority root path
         certificate_authority_root_path = "config/tls_private_ca.pem"
         # server certificate path
