--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,8 +98,8 @@ massa_versioning = { path = "./massa-versioning" }
 massa_wallet = { path = "./massa-wallet" }
 
 # Massa projects dependencies
-massa-proto-rs = {git = "https://github.com/massalabs/massa-proto-rs", "branch" = "main"}
-massa-sc-runtime = {git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "main"}
+massa-proto-rs = {git = "https://github.com/massalabs/massa-proto-rs", "rev" = "cc0b0b3d9b245ac517d28ac6dcf1e87d72b881b7"}
+massa-sc-runtime = {git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "a50d690ec5f7c3d4267e61c6d283e55dff49348f"}
 peernet = { git = "https://github.com/massalabs/PeerNet", "branch" = "main" }
 
 # Common dependencies
