Use is_terminal instead of atty crate + update rust_decimal to 1.32 (+ disable default features)

--- a/massa-client/Cargo.toml
+++ b/massa-client/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = {workspace = true}
-atty = {workspace = true}
+is-terminal = { workspace = true }
 console = {workspace = true}
 dialoguer = {workspace = true}
 rustyline = {workspace = true}
