--- a/massa-consensus-worker/Cargo.toml
+++ b/massa-consensus-worker/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [features]
 sandbox = []
 bootstrap_server = []
-testing = ["tokio", "crossbeam-channel", "massa_execution_exports/testing", "massa_pos_worker/testing", "massa_protocol_exports/testing", "massa_consensus_exports/testing", "massa_pos_exports/testing", "massa_pool_exports/testing"]
+testing = ["tokio", "crossbeam-channel", "massa_execution_exports/testing", "massa_protocol_exports/testing", "massa_consensus_exports/testing", "massa_pos_exports/testing", "massa_pool_exports/testing"]
 
 [dependencies]
 num = {workspace = true, "features" = ["serde"]}   # BOM UPGRADE     Revert to {"version": "0.4", "features": ["serde"]} if problem
@@ -26,7 +26,6 @@ massa_hash = {workspace = true}
 massa_logging = {workspace = true}
 massa_execution_exports = {workspace = true}
 massa_protocol_exports = {workspace = true, "optional" = true}
-massa_pos_worker = {workspace = true, "optional" = true}
 massa_pos_exports = {workspace = true, "optional" = true}
 massa_pool_exports = {workspace = true, "optional" = true}
 tokio = {workspace = true, "optional" = true}   # BOM UPGRADE     Revert to {"version": "1.0", "optional": true} if problem
