fix: doctests dev deps

--- a/massa-consensus-exports/Cargo.toml
+++ b/massa-consensus-exports/Cargo.toml
@@ -25,3 +25,7 @@ massa_storage = {workspace = true}
 massa_serialization = {workspace = true}
 massa_time = {workspace = true}
 massa_signature = {workspace = true}
+
+[dev-dependencies]
+massa_hash = {workspace = true}
+massa_serialization = {workspace = true}
