--- a/massa-ledger-exports/Cargo.toml
+++ b/massa-ledger-exports/Cargo.toml
@@ -19,3 +19,6 @@ massa-proto-rs = {workspace = true, "features" = ["tonic"]}
 massa_models = {workspace = true}
 massa_serialization = {workspace = true}
 massa_db_exports = {workspace = true}
+
+[dev-dependencies]
+massa_hash = {workspace = true}
