add test for new_operations

--- a/massa-grpc/Cargo.toml
+++ b/massa-grpc/Cargo.toml
@@ -51,4 +51,4 @@ massa_consensus_exports = { workspace = true, "features" = ["testing"] }
 massa_channel = { workspace = true }
 mockall = { workspace = true }
 massa_final_state = { workspace = true }
-tokio = { workspace = true, "features" = ["test-util"] }
+tokio = { workspace = true, "features" = ["test-util", "time"] }
