--- a/massa-db-worker/Cargo.toml
+++ b/massa-db-worker/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.26.1"
 edition = "2021"
 
 [dependencies]
-parking_lot = {workspace = true, "features" = ["deadlock_detection"]}
+parking_lot = {workspace = true}
 rocksdb = {workspace = true}
 massa_hash = {workspace = true}
 massa_models = {workspace = true}
 massa_serialization = {workspace = true}
 massa_db_exports = {workspace = true}
+
+[dev-dependencies]
+tempfile = {workspace = true}   # BOM UPGRADE     Revert to "3.3" if problem
+assert_matches = {workspace = true}
