--- a/massa-db-exports/Cargo.toml
+++ b/massa-db-exports/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 [dependencies]
 displaydoc = {workspace = true}
 thiserror = {workspace = true}
-parking_lot = {workspace = true, "features" = ["deadlock_detection"]}
+parking_lot = {workspace = true}
 massa_hash = {workspace = true}
 massa_models = {workspace = true}
