--- a/massa-async-pool/Cargo.toml
+++ b/massa-async-pool/Cargo.toml
@@ -23,3 +23,4 @@ massa-proto-rs = {workspace = true, "features" = ["tonic"]}
 [dev-dependencies]
 tempfile = {workspace = true}   # BOM UPGRADE     Revert to "3.3" if problem
 massa_ledger_worker = {workspace = true}
+assert_matches = { workspace = true }
